k3s-sonarqube/postgres-statefulset.yaml
# postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: sonarqube
spec:
  serviceName: "postgresql" # headless-svc, defined in postgresql-headless-svc.yaml
  replicas: 1
  selector:
    matchLabels: { app: postgres }
  template:
    metadata:
      labels: { app: postgres }
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: postgres
          image: postgres:17.5 # latest stable version
          ports: [{ containerPort: 5432 }]
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: manual
        volumeName: pgdata-pv # hard link to PV, defined in postgres-pv.yaml file
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 10Gi
