k3s-sonarqube/postgresql-headless-svc.yaml
# postgresql-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: sonarqube
  labels: { app: postgres }
spec:
  clusterIP: None # makes Service headless
  selector: { app: postgres }
  ports:
    - name: tcp-postgres
      port: 5432
      targetPort: 5432
